--- a/static_assets/index.html
+++ b/static_assets/index.html
@@ -19,6 +19,9 @@
     <li>
       <a href="jstoolchain.html">Javascript Toolchain</a>
     </li>
+    <li>
+      <a href="vuetify.html">Vuetify</a>
+    </li>
   </ul>
 </body>
 
